# tracing-layer-slack-discord

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
core/: Cargo.toml
core/src/: aws_lambda.rs  filters.rs  layer.rs  lib.rs  worker.rs
examples/: exclude_fields_from_messages.rs  exclude_messages_below_level.rs  exclude_messages_by_content.rs  filter_records_by_fields.rs  simple.rs
examples/discord/: Cargo.toml
examples/discord/examples/: discord_exclude_fields_from_messages.rs  discord_exclude_messages_below_level.rs  discord_exclude_messages_by_content.rs  discord_filter_records_by_fields.rs  discord_simple.rs  discord_sync.rs
examples/slack/: Cargo.toml
examples/slack/examples/: slack_exclude_fields_from_messages.rs  slack_exclude_messages_below_level.rs  slack_exclude_messages_by_content.rs  slack_filter_records_by_fields.rs  slack_simple.rs
layers/discord/: Cargo.toml  README.md
layers/discord/src/: lib.rs
layers/slack/: Cargo.toml  README.md
layers/slack/src/: lib.rs
src/: config.rs  filters.rs  layer.rs  lib.rs  matches.rs  message.rs  types.rs  worker.rs
