[package]
name = "tracing-layer-slack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-bunyan-formatter = { default-features = false, version = "0.2.4" }
