[package]
name = "tracing-layer-slack"
version = "0.3.1"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Slack"
documentation = "https://docs.rs/tracing-layer-slack"
repository = "https://github.com/seanpianka/tracing-layer-slack/"
readme = "README.md"
keywords = ["tracing", "layer", "slack", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_slack"
path = "src/lib.rs"

[[example]]
name = "simple"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
regex = "1"
