[package]
name = "tracing-layer-slack"
version = "0.6.2"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Slack"
documentation = "https://docs.rs/tracing-layer-slack"
repository = "https://github.com/seanpianka/tracing-layer-slack/"
readme = "README.md"
keywords = ["tracing", "layer", "slack", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_slack"
path = "src/lib.rs"

[[example]]
name = "simple"

[features]
default = ["blocks", "rustls", "gzip"]
blocks = []
gzip = [ "reqwest/gzip" ]
native-tls = [ "reqwest/default-tls" ]
rustls = [ "reqwest/rustls-tls" ]

[dependencies]
debug_print = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
regex = "1"
