[package]
name = "tracing-layer-core"
version = "0.0.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "tracing_layer_core"
path = "src/lib.rs"
doctest = false

[features]
default = ["embed", "rustls", "gzip"]
embed = []
gzip = [ "reqwest/gzip" ]
native-tls = [ "reqwest/default-tls" ]
rustls = [ "reqwest/rustls-tls" ]
aws-lambda = [ "aws-sdk-lambda", "lambda-extension" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12.3", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
regex = "1"
aws-sdk-lambda = { version = "1.20", optional = true}
lambda-extension = { version = "0.10", optional = true}
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter"]}
aws-config = { version = "1.1" , optional = true}