[package]
name = "tracing-layer-discord"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Discord"
documentation = "https://docs.rs/tracing-layer-discord"
repository = "https://github.com/seanpianka/tracing-layer-discord/"
readme = "README.md"
keywords = ["tracing", "layer", "discord", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_discord"
path = "src/lib.rs"
doctest = false

[features]
default = ["embed", "rustls", "gzip"]
embed = []
gzip = [ "reqwest/gzip" ]
native-tls = [ "reqwest/default-tls" ]
rustls = [ "reqwest/rustls-tls" ]

[dependencies]
tracing-layer-core = { path = "../../core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
regex = "1"
