[package]
name = "tracing-layer-discord"
version = "0.1.8"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Discord"
documentation = "https://docs.rs/tracing-layer-discord"
repository = "https://github.com/seanpianka/tracing-layer-discord/"
readme = "README.md"
keywords = ["tracing", "layer", "discord", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_discord"
path = "src/lib.rs"
doctest = false

[features]
default = ["embed", "rustls", "gzip"]
embed = []
gzip = [ "tracing-layer-core/gzip" ]
native-tls = [ "tracing-layer-core/native-tls" ]
rustls = [ "tracing-layer-core/rustls" ]

[dependencies]
tracing-layer-core = { path = "../../core", version = "0.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
