[package]
name = "tracing-layer-slack"
version = "0.7.1"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Slack"
documentation = "https://docs.rs/tracing-layer-slack"
repository = "https://github.com/seanpianka/tracing-layer-slack/"
readme = "README.md"
keywords = ["tracing", "layer", "slack", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_slack"
path = "src/lib.rs"
doctest = false

[features]
default = ["blocks", "rustls", "gzip"]
blocks = []
gzip = [ "tracing-layer-core/gzip" ]
native-tls = [ "tracing-layer-core/native-tls" ]
rustls = [ "tracing-layer-core/rustls" ]

[dependencies]
tracing-layer-core = { path = "../../core", version = "0.2.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
